--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <div>Dad joke will be here</div>
+    <div class="joke">Dad joke will be here</div>
     <button class="btn" onClick="window.location.reload();">NEW JOKE</button>
   </body>
   <script type="module" src="/scripts/main.js"></script>
